--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "serialize-javascript": ">=3.1.0"
   },
   "dependencies": {
     "@types/jquery": "^3.3.34",
