--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "serialize-javascript": ">=3.1.0",
     "style-loader": "^0.22.1",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@types/jquery": "^3.3.5",
-    "jquery": "^3.3.1"
+    "jquery": "^3.5.1"
   }
 }
